--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ESCategory.cs" />
     <Compile Include="Messages\PersistenceMessages.cs" />
     <Compile Include="Messages\Subscriptions.cs" />
     <Compile Include="Aggregate.cs" />
