Major refactoring, now with working projections and more stable store interface.

--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -58,15 +58,15 @@
   <ItemGroup>
     <Compile Include="AggregateSnapshot.cs" />
     <Compile Include="CommandProcessor.cs" />
+    <Compile Include="CommandProcessorBase.cs" />
     <Compile Include="ESCategory.cs" />
     <Compile Include="EvenException.cs" />
+    <Compile Include="EventFactory.cs" />
     <Compile Include="EventProcessorEntry.cs" />
-    <Compile Include="IRawStorageProjectionEvent.cs" />
+    <Compile Include="ExtensionMethods.cs" />
     <Compile Include="Messages\Initialization\InitializeEventStore.cs" />
     <Compile Include="IStreamStore.cs" />
-    <Compile Include="ProjectionIndexWriter.cs" />
-    <Compile Include="IProjectionStreamIndex.cs" />
-    <Compile Include="Messages\PersistenceMessages.cs" />
+    <Compile Include="Messages\Persistence.cs" />
     <Compile Include="Messages\Subscriptions.cs" />
     <Compile Include="Aggregate.cs" />
     <Compile Include="AggregateSupervisor.cs" />
@@ -81,36 +81,23 @@
     <Compile Include="EventStoreReader.cs" />
     <Compile Include="EventStoreSettings.cs" />
     <Compile Include="EventStoreWriter.cs" />
-    <Compile Include="IdentityMessages.cs" />
     <Compile Include="EventStoreGateway.cs" />
     <Compile Include="ICryptoService.cs" />
-    <Compile Include="IStreamSnapshot.cs" />
     <Compile Include="Messages\Commands.cs" />
     <Compile Include="Messages\ReplayMessages.cs" />
     <Compile Include="Messages\Initialization.cs" />
-    <Compile Include="IPayloadSerializer.cs" />
-    <Compile Include="IProjectionStreamEvent.cs" />
-    <Compile Include="IRawEvent.cs" />
-    <Compile Include="IRawStorageEvent.cs" />
-    <Compile Include="IStorageDriver.cs" />
-    <Compile Include="IStorageReader.cs" />
-    <Compile Include="IStorageWriter.cs" />
-    <Compile Include="IStreamEvent.cs" />
-    <Compile Include="IStreamPredicate.cs" />
-    <Compile Include="StoredEvent.cs" />
+    <Compile Include="DataInterfaces.cs" />
+    <Compile Include="IProjectionStreamPredicate.cs" />
     <Compile Include="ProjectionState.cs" />
     <Compile Include="ProjectionStreamSupervisor.cs" />
     <Compile Include="ProjectionStreamState.cs" />
     <Compile Include="ProjectionStream.cs" />
-    <Compile Include="ProjectionStreamEvent.cs" />
     <Compile Include="EventProcessorSupervisor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropsFactory.cs" />
     <Compile Include="QueryHint.cs" />
-    <Compile Include="RawEvent.cs" />
-    <Compile Include="RawStreamEvent.cs" />
     <Compile Include="EventStoreSetup.cs" />
-    <Compile Include="StreamEventAttribute.cs" />
+    <Compile Include="ESEventAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
