Moved processor handler logic to a dedicated class, added new overloads to handle events after persistence.

--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -49,6 +49,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateSnapshot.cs" />
+    <Compile Include="MessageHandler.cs" />
     <Compile Include="CommandProcessor.cs" />
     <Compile Include="CommandProcessorBase.cs" />
     <Compile Include="ESCategory.cs" />
