--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -70,7 +70,7 @@
     <Compile Include="EventStore.cs" />
     <Compile Include="EventStoreConfig.cs" />
     <Compile Include="EventStoreContext.cs" />
-    <Compile Include="EventStoreQuery.cs" />
+    <Compile Include="ProjectionStreamQuery.cs" />
     <Compile Include="EventStoreReader.cs" />
     <Compile Include="EventStoreSettings.cs" />
     <Compile Include="EventStoreWriter.cs" />
