--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -48,11 +48,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Argument.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DefaultSerializer.cs" />
     <Compile Include="EvenStorageFormatAttribute.cs" />
+    <Compile Include="EventCount.cs" />
     <Compile Include="EventProcessor.cs" />
     <Compile Include="EventRegistry.cs" />
+    <Compile Include="ExpectedSequence.cs" />
     <Compile Include="IndexSequenceEntry.cs" />
     <Compile Include="MessageHandler.cs" />
     <Compile Include="CommandProcessor.cs" />
@@ -71,7 +74,7 @@
     <Compile Include="PersistedEvent.cs" />
     <Compile Include="Persistence\BaseSqlStore.cs" />
     <Compile Include="Persistence\BatchStringBuilder.cs" />
-    <Compile Include="Persistence\InMemoryStorage.cs" />
+    <Compile Include="Persistence\InMemoryStore.cs" />
     <Compile Include="Persistence\MySqlStore.cs" />
     <Compile Include="Projection.cs" />
     <Compile Include="ISerializer.cs" />
