--- a/Src/Even.Tests/packages.config
+++ b/Src/Even.Tests/packages.config
@@ -6,6 +6,7 @@
   <package id="DBHelpers" version="1.1.0.0" targetFramework="net46" />
   <package id="MySql.Data" version="6.9.7" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net46" />
+  <package id="NSubstitute" version="1.8.2.0" targetFramework="net46" />
   <package id="xunit" version="2.0.0" targetFramework="net46" />
   <package id="xunit.abstractions" version="2.0.0" targetFramework="net46" />
   <package id="xunit.assert" version="2.0.0" targetFramework="net46" />
