--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BufferedEventWriterTests.cs" />
     <Compile Include="SerialEventStreamWriterTests.cs" />
     <Compile Include="EvenTestKit.cs" />
     <Compile Include="MockEventStore.cs" />
@@ -93,6 +94,7 @@
     <Compile Include="Persistence\MySqlEventStoreTests.cs" />
     <Compile Include="Persistence\SqlServer2012StoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\BatchStringBuilderTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
