--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -85,6 +85,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BufferedEventWriterTests.cs" />
+    <Compile Include="Mocks\MockProjectionStore.cs" />
+    <Compile Include="ProjectionIndexWriterTests.cs" />
     <Compile Include="SerialEventStreamWriterTests.cs" />
     <Compile Include="EvenTestKit.cs" />
     <Compile Include="Mocks\MockEventStore.cs" />
@@ -95,6 +97,7 @@
     <Compile Include="Persistence\SqlServer2012StoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utils\BatchStringBuilderTests.cs" />
+    <Compile Include="Utils\EnumerableExtensionsTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
