--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -62,6 +62,7 @@
     <Compile Include="EventRegistry.cs" />
     <Compile Include="ExpectedSequence.cs" />
     <Compile Include="IndexSequenceEntry.cs" />
+    <Compile Include="ProjectionIndexWriter.cs" />
     <Compile Include="MessageHandler.cs" />
     <Compile Include="CommandProcessor.cs" />
     <Compile Include="CommandProcessorBase.cs" />
@@ -108,6 +109,7 @@
     <Compile Include="StreamHash.cs" />
     <Compile Include="UnpersistedEvent.cs" />
     <Compile Include="UnpersistedRawEvent.cs" />
+    <Compile Include="Utils\EnumerableExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
