--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -87,9 +87,14 @@
     <Compile Include="BufferedEventWriterTests.cs" />
     <Compile Include="EventDispatcherTests.cs" />
     <Compile Include="EventStoreWriterTests.cs" />
+    <Compile Include="Mocks\MockPersistedEventFactory.cs" />
     <Compile Include="Mocks\MockProjectionStore.cs" />
+    <Compile Include="Mocks\TestStore.cs" />
     <Compile Include="ProjectionCheckpointWriterTests.cs" />
     <Compile Include="ProjectionIndexWriterTests.cs" />
+    <Compile Include="ReadIndexedProjectionStreamWorkerTests.cs" />
+    <Compile Include="ReadStreamWorkerTests.cs" />
+    <Compile Include="ReadWorkerTests.cs" />
     <Compile Include="SerialEventStreamWriterTests.cs" />
     <Compile Include="EvenTestKit.cs" />
     <Compile Include="Mocks\MockEventStore.cs" />
