--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -86,6 +86,7 @@
   <ItemGroup>
     <Compile Include="BufferedEventWriterTests.cs" />
     <Compile Include="EventDispatcherTests.cs" />
+    <Compile Include="EventStoreReaderTests.cs" />
     <Compile Include="EventStoreWriterTests.cs" />
     <Compile Include="Mocks\MockPersistedEventFactory.cs" />
     <Compile Include="Mocks\MockProjectionStore.cs" />
@@ -104,6 +105,7 @@
     <Compile Include="Persistence\MySqlEventStoreTests.cs" />
     <Compile Include="Persistence\SqlServer2012StoreTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ProbeRelay.cs" />
     <Compile Include="Utils\BatchStringBuilderTests.cs" />
     <Compile Include="Utils\EnumerableExtensionsTests.cs" />
   </ItemGroup>
