--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -90,10 +90,12 @@
     <Compile Include="EventStoreWriterTests.cs" />
     <Compile Include="Mocks\MockPersistedEvent.cs" />
     <Compile Include="Mocks\MockPersistedEventFactory.cs" />
+    <Compile Include="Mocks\MockPersistedStreamEvent.cs" />
     <Compile Include="Mocks\MockProjectionStore.cs" />
     <Compile Include="Mocks\TestStore.cs" />
     <Compile Include="ProjectionCheckpointWriterTests.cs" />
     <Compile Include="ProjectionIndexWriterTests.cs" />
+    <Compile Include="ProjectionReplayWorkerTests.cs" />
     <Compile Include="ProjectionStreamTests.cs" />
     <Compile Include="ReadIndexedProjectionStreamWorkerTests.cs" />
     <Compile Include="ReadStreamWorkerTests.cs" />
