Added some tests for projections.

--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -97,6 +97,7 @@
     <Compile Include="ProjectionIndexWriterTests.cs" />
     <Compile Include="ProjectionReplayWorkerTests.cs" />
     <Compile Include="ProjectionStreamTests.cs" />
+    <Compile Include="ProjectionTests.cs" />
     <Compile Include="ReadIndexedProjectionStreamWorkerTests.cs" />
     <Compile Include="ReadStreamWorkerTests.cs" />
     <Compile Include="ReadWorkerTests.cs" />
