Rewrote a lot of stuff.

--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -52,10 +52,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandProcessorSupervisor.cs" />
     <Compile Include="Argument.cs" />
     <Compile Include="BufferedEventWriter.cs" />
     <Compile Include="Constants.cs" />
     <Compile Include="DefaultSerializer.cs" />
+    <Compile Include="EvenServices.cs" />
     <Compile Include="EvenStorageFormatAttribute.cs" />
     <Compile Include="EventCount.cs" />
     <Compile Include="EventProcessor.cs" />
@@ -67,11 +69,13 @@
     <Compile Include="EventDispatcher.cs" />
     <Compile Include="IPersistedEvent.cs" />
     <Compile Include="IPersistedStreamEvent.cs" />
+    <Compile Include="Messages\EventProcessorMessages.cs" />
     <Compile Include="Messages\EventReadMessages.cs" />
     <Compile Include="Messages\GenericMessages.cs" />
+    <Compile Include="Messages\InformationMessages.cs" />
     <Compile Include="Messages\IRequest.cs" />
     <Compile Include="Options.cs" />
-    <Compile Include="PersistedEventFactory2.cs" />
+    <Compile Include="PersistedEventFactory.cs" />
     <Compile Include="ProjectionCheckpointWriter.cs" />
     <Compile Include="ProjectionEvent.cs" />
     <Compile Include="ProjectionIndexWriter.cs" />
@@ -80,33 +84,33 @@
     <Compile Include="CommandProcessorBase.cs" />
     <Compile Include="ESCategoryAttribute.cs" />
     <Compile Include="EvenException.cs" />
-    <Compile Include="EventProcessorEntry.cs" />
     <Compile Include="ExtensionMethods.cs" />
-    <Compile Include="Messages\Initialization\InitializeEventStore.cs" />
     <Compile Include="IEventStore.cs" />
     <Compile Include="Messages\Persistence.cs" />
     <Compile Include="Messages\ProjectionMessages.cs" />
     <Compile Include="Aggregate.cs" />
-    <Compile Include="CommandProcessorSupervisor.cs" />
+    <Compile Include="AggregateSupervisor.cs" />
     <Compile Include="AkkaAsyncHelper.cs" />
     <Compile Include="PersistedEvent.cs" />
     <Compile Include="Persistence\BaseSqlStore.cs" />
+    <Compile Include="ProjectionSupervisor.cs" />
     <Compile Include="ReadWorkers.cs" />
+    <Compile Include="RejectReason.cs" />
     <Compile Include="StreamEventReader.cs" />
+    <Compile Include="SystemClock.cs" />
+    <Compile Include="Timeout.cs" />
     <Compile Include="Utils\BatchStringBuilder.cs" />
     <Compile Include="Persistence\InMemoryStore.cs" />
     <Compile Include="Persistence\MySqlStore.cs" />
     <Compile Include="Persistence\SqlServer2012Store.cs" />
     <Compile Include="Projection.cs" />
     <Compile Include="ISerializer.cs" />
-    <Compile Include="EventStore.cs" />
-    <Compile Include="EventStoreContext.cs" />
+    <Compile Include="EvenMaster.cs" />
     <Compile Include="ProjectionStreamQuery.cs" />
     <Compile Include="EventStoreReader.cs" />
-    <Compile Include="EventStoreSettings.cs" />
     <Compile Include="EventStoreWriter.cs" />
-    <Compile Include="EventStoreGateway.cs" />
-    <Compile Include="Messages\Commands.cs" />
+    <Compile Include="EvenGateway.cs" />
+    <Compile Include="Messages\CommandMessages.cs" />
     <Compile Include="Messages\ReplayMessages.cs" />
     <Compile Include="Messages\Initialization.cs" />
     <Compile Include="IProjectionStreamPredicate.cs" />
@@ -116,7 +120,7 @@
     <Compile Include="EventProcessorSupervisor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PropsFactory.cs" />
-    <Compile Include="EventStoreSetup.cs" />
+    <Compile Include="EvenSetup.cs" />
     <Compile Include="ESEventAttribute.cs" />
     <Compile Include="PersistedRawEvent.cs" />
     <Compile Include="SerialEventStreamWriter.cs" />
