Added some basic integration tests. Better command results and fixed stuff on the gateway.

--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -85,6 +85,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AggregateTests.cs" />
+    <Compile Include="BasicIntegrationTests.cs" />
     <Compile Include="BufferedEventWriterTests.cs" />
     <Compile Include="EvenSetupTests.cs" />
     <Compile Include="EventDispatcherTests.cs" />
