Fix query and add new integration test for queries.

--- a/Src/Even.Tests/Even.Tests.csproj
+++ b/Src/Even.Tests/Even.Tests.csproj
@@ -87,6 +87,7 @@
     <Compile Include="AggregateTests.cs" />
     <Compile Include="BasicIntegrationTests.cs" />
     <Compile Include="BufferedEventWriterTests.cs" />
+    <Compile Include="EvenGatewayTests.cs" />
     <Compile Include="EvenSetupTests.cs" />
     <Compile Include="EventDispatcherTests.cs" />
     <Compile Include="EventStoreReaderTests.cs" />
