Added a new command validator.

--- a/Src/Even/Even.csproj
+++ b/Src/Even/Even.csproj
@@ -65,6 +65,7 @@
     <Compile Include="EventReader.cs" />
     <Compile Include="EventRegistry.cs" />
     <Compile Include="ExpectedSequence.cs" />
+    <Compile Include="ICommandValidator.cs" />
     <Compile Include="IndexedProjectionStreamReader.cs" />
     <Compile Include="IndexSequenceEntry.cs" />
     <Compile Include="EventDispatcher.cs" />
